_course_files/5-FaultInjection/6-istio-rules-FrontMatchHeaders.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp 
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - headers:  # IF
          x-bird:
            exact: canary
      route: # THEN
      - destination:
          host: fleetman-webapp
          subset: canary-group
    - route: # CATCH ALL
      - destination:
          host: fleetman-webapp
          subset: stable-group
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp
  subsets:
    - labels:
        status: stable
      name: stable-group
    - labels:
        status: canary
      name: canary-group
